fix: check duplicate