@@ -15,6 +15,7 @@ import lombok.experimental.FieldDefaults;
 import lombok.experimental.NonFinal;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -37,6 +38,7 @@ public class CompactorService {
     S3Service s3Service;
     MessageRefRepository messageRefRepository;
     ObjectMapper objectMapper;
+    StringRedisTemplate redisTemplate;
 
     @Value("${app.s3.prefix}")
     @NonFinal
@@ -46,50 +48,54 @@ public class CompactorService {
     @NonFinal
     int targetBytes;
 
+    @Transactional
     public void compactGroup(String tenant, String yyyyMM, String conversationId, List<MessageRef> batch) throws Exception {
         String segUlid = Ulids.newUlid();
         String dataKey = S3Objects.segDataKey(prefix, tenant, yyyyMM, conversationId, segUlid);
-        String idxKey = S3Objects.segIndexKey(prefix, tenant, yyyyMM, conversationId, segUlid, false);
+        String idxKey  = S3Objects.segIndexKey(prefix, tenant, yyyyMM, conversationId, segUlid, /*json*/ false);
 
         ByteArrayOutputStream data = new ByteArrayOutputStream(targetBytes + 1024 * 1024);
         List<IndexEntry> idx = new ArrayList<>();
-
         long offset = 0L;
-        for(MessageRef msgRef : batch) {
-            // Load L0 CAS
+
+        for (MessageRef msgRef : batch) {
             String hash = msgRef.getRefId().substring(PrefixConstants.Ref.CAS.length());
-            byte[] obj = s3Service.getBytes(S3Objects.casKey(prefix, hash));
+            byte[] obj  = s3Service.getBytes(S3Objects.casKey(prefix, hash));
             byte[] json = ZstdCodec.decompress(obj);
 
-            // mỗi record -> zstd frame riêng
+            // tạo 1 zstd frame/record
             byte[] frame = ZstdCodec.compress(json, 9);
             data.write(frame);
             idx.add(IndexEntry.builder()
-                            .msgId(msgRef.getId())
-                            .offset(offset)
-                            .length(frame.length)
+                    .msgId(msgRef.getId())
+                    .offset(offset)
+                    .length(frame.length)
                     .build());
             offset += frame.length;
         }
 
-        // write segment + index
+        // write segment
         s3Service.putBytes(dataKey, data.toByteArray(), S3Constants.ContentType.ZSTD);
-        byte[] idxJson = objectMapper.writeValueAsBytes(idx);
-        s3Service.putBytes(dataKey, idxJson, S3Constants.ContentType.ZSTD);
 
-        List<String> msgIds = idx.stream()
-                .map(IndexEntry::getMsgId)
-                .collect(Collectors.toList());
-        List<MessageRef> messageRefs = messageRefRepository.findAllById(msgIds);
-        Map<String, MessageRef> msgIdToMessageRef = messageRefs.stream()
-                .collect(Collectors.toMap(MessageRef::getId, mr -> mr));
+        // write index (JSON thuần) -> đúng key & content-type
+        byte[] idxJson = objectMapper.writeValueAsBytes(idx);
+        s3Service.putBytes(idxKey, idxJson, S3Constants.ContentType.JSON);
+
+        // Lưu mapping segUlid -> dataKey để Reader resolve chính xác
+        redisTemplate.opsForValue().set("segKey:" + segUlid, dataKey);
+
+        // update refId -> seg:<segULID>:<offset>:<length>
+        Map<String, MessageRef> msgIdToMessageRef = messageRefRepository
+                .findAllById(idx.stream().map(IndexEntry::getMsgId).toList())
+                .stream().collect(Collectors.toMap(MessageRef::getId, mr -> mr));
+
         for (IndexEntry e : idx) {
-            MessageRef messageRef = msgIdToMessageRef.get(e.getMsgId());
-            if (messageRef != null) {
-                messageRef.setRefId(PrefixConstants.Ref.MESSAGE_REF.formatted(segUlid, e.getOffset(), e.getLength()));
+            MessageRef mr = msgIdToMessageRef.get(e.getMsgId());
+            if (mr != null) {
+                mr.setRefId(PrefixConstants.Ref.MESSAGE_REF.formatted(segUlid, e.getOffset(), e.getLength()));
             }
         }
-        messageRefRepository.saveAll(messageRefs);
+        messageRefRepository.saveAll(msgIdToMessageRef.values());
     }
 
     @Transactional
